# nlp

./: .gitignore  Makefile  README.md  pyproject.toml
report/: report.tex
report2/: report.tex
report3/: report.tex
report4/: report.tex
src/: snippets.py
src/lovoai/: constants.py  geneate_audio.py  get_speakers.py  speakers.json
src/model/: preprocessing.py
src/model/cnn/: model.py  test.py  train.py
src/model/resnet/: fastai.py
src/task_1/lovoai/: settings.py
src/task_1/model/cnn/: test.py
src/task_1/model/resnet/: fastai.py
src/task_1_and_2/lovoai/: geneate_audio.py  get_speakers.py
src/task_1_and_2/model/cnn/: check_dataset.py  dataset.py  model.py  train.py
src/task_3/: classical_models.py  constants.py  main.py  preprocessing.py
src/task_3/models/: classical_models.py  neural_network.py
src/task_3/vectorization/: __init__.py  bow.py  word2vect.py
src/task_4/: encoder.py  generator.py  loader.py  main.py
src/training/: model.py  model_cnn.py  model_fastai.py  model_resnet_fastai.py  preprocessing.py
src/tts/: tts_librosa.py
