[tool.poetry]
name = "nlp"
version = "0.1.0"
description = ""
authors = ["Griffo <davide.griffon@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
numpy = "^2.1.2"
scipy = "^1.14.1"
matplotlib = "^3.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
